compiler/testData/diagnostics/tests/dataClasses/dataObjectDisabled.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: -DataObjects
<!UNSUPPORTED_FEATURE!>data<!> object Object

/* GENERATED_FIR_TAGS: data, objectDeclaration */
